Adding overflow in section

--- a/module2-solution/style.css
+++ b/module2-solution/style.css
@@ -12,6 +12,7 @@
             margin-right: auto;
             margin-left: auto;
             position: relative;
+            overflow: auto;
         }
      
         section >h1{
